# paddock-power

./: .gitignore  PaddockPower.py  PaddockPower_dialog.py  PaddockPower_dialog_base.ui  README.html  README.md  README.txt  __init__.py  fenceline_analysis_alg.py  fenceline_analysis_alg.py.bak  fenceline_analysis_alg.py.old  metadata.txt  paddock_power_providers.py  pb_tool.cfg  pipeline_analysis_alg.py  pipeline_analysis_alg.py.bak  pipeline_analysis_alg.py.old  split_paddock_alg.py.old  tomlapp.sh  topp.sh  toppold.sh  torangeiqpp.sh  waterpoint_analysis_alg.py  waterpoint_analysis_alg_old.py  zipmlapp.sh  zippp.sh  zipppold.sh  zipraneiqpp.sh
Old/: New Waters.py  (+6 more)
schema/: .gitignore  alembic.ini  pyproject.toml  requirements.txt  test.sql
schema/mlapp_schema/data/: __init__.py  base.py  constants.py  crud.py  engine.py  names.py  utils.py
schema/mlapp_schema/data/models/: __init__.py  base_paddock.py  boundary.py  feature.py  fence.py  land_type.py  land_type_condition.py  paddock.py  paddock_land_type.py  pipeline.py  watered_area.py  waterpoint.py  waterpoint_buffer.py
schema/mlapp_schema/migrations/: env.py  script.py.mako
schema/mlapp_schema/migrations/versions/: 202303071315-initial_dummy-init.py  202303071317-fecb84f81920-initial_spatialite.py  202303072150-7abf0c8f8043-initialise_spatialite_and_clean_up_.py  202303072208-74fa66ce6dde-add_all_mla_paddock_power_tables.py  202303072224-d322667749a3-initialise_spatialite.py  202303072225-78d26d41a76a-add_all_mla_paddock_power_tables.py  (+1 more)
schema/mlapp_schema/models/: __init__.py
schema/tests/: test_db.py
(+897 files in other folders)
