[tool.poetry]
name = "mlapp-schema"
version = "0.1.0"
description = "MLA Paddock Power Schema"
authors = ["Tom <tom@trailmarker.io>"]
readme = "README.md"
packages = [{include = "mlapp_schema"}]

[tool.poetry.dependencies]
python = "^3.9"
geoalchemy2 = "^0.13.1"
alembic = "^1.9.4"

[tool.poetry.scripts]
test = 'scripts:test'

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
